[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Success.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kenney Future.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="Success" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "YAYYYYYYYY!!!!!"
align = 1
valign = 1

[node name="ContinueButton" type="MenuButton" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 1024.0
margin_bottom = 117.0
text = "Continue"

[node name="ExitButton" type="MenuButton" parent="VBoxContainer"]
margin_top = 157.0
margin_right = 1024.0
margin_bottom = 177.0
text = "Exit"
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
